--- a/pubs.yaml
+++ b/pubs.yaml
@@ -1,4 +1,4 @@
-- doi: 10.1101/2023.04.10.536285
+- doi: 10.1021/jacs.3c08014
   preprint:
     name: BioRxiv
     url: http://dx.doi.org/10.1101/2023.04.10.536285
